5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1684_1879.log
== TEST (2019-06-21 00:46:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
n=iny(input(","))

if(n==92):
	print("Manaus")
elif(n==61):
	print("Brasilia")
elif(n==71):
	print("Salvador")
elif(n==11):
	print("Sao Paulo")
elif(n==32):
	print("Juiz de Fora")
elif(n==19):
	print("Campinas")
elif(n==27):
	print("Vitoria")
elif(n==31):
	print("Belo Horizonte")
elif(n==91):
	print("Belem")
else:
	print("DDD nao cadastrado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n=iny(input())
NameError: name 'iny' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:46:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
n=iny(input(","))

if(n==92):
	print("Manaus")
elif(n==61):
	print("Brasilia")
elif(n==71):
	print("Salvador")
elif(n==11):
	print("Sao Paulo")
elif(n==32):
	print("Juiz de Fora")
elif(n==19):
	print("Campinas")
elif(n==27):
	print("Vitoria")
elif(n==31):
	print("Belo Horizonte")
elif(n==91):
	print("Belem")
else:
	print("DDD nao cadastrado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n=iny(input())
NameError: name 'iny' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:46:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
n=int(input(","))

if(n==92):
	print("Manaus")
elif(n==61):
	print("Brasilia")
elif(n==71):
	print("Salvador")
elif(n==11):
	print("Sao Paulo")
elif(n==32):
	print("Juiz de Fora")
elif(n==19):
	print("Campinas")
elif(n==27):
	print("Vitoria")
elif(n==31):
	print("Belo Horizonte")
elif(n==91):
	print("Belem")
else:
	print("DDD nao cadastrado")
-- OUTPUT:
DDD nao cadastrado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:18:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
n=int(input(","))

if(n==92):
	print("Manaus")
elif(n==61):
	print("Brasilia")
elif(n==71):
	print("Salvador")
elif(n==11):
	print("Sao Paulo")
elif(n==32):
	print("Juiz de Fora")
elif(n==19):
	print("Campinas")
elif(n==27):
	print("Vitoria")
elif(n==31):
	print("Belo Horizonte")
elif(n==91):
	print("Belem")
else:
	print("DDD nao cadastrado")
-- OUTPUT:
DDD nao cadastrado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:18:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
n=float(input(","))

if(n==92):
	print("Manaus")
elif(n==61):
	print("Brasilia")
elif(n==71):
	print("Salvador")
elif(n==11):
	print("Sao Paulo")
elif(n==32):
	print("Juiz de Fora")
elif(n==19):
	print("Campinas")
elif(n==27):
	print("Vitoria")
elif(n==31):
	print("Belo Horizonte")
elif(n==91):
	print("Belem")
else:
	print("DDD nao cadastrado")
-- OUTPUT:
DDD nao cadastrado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 03:19:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
n=float(input(","))

if(n==92):
	print("Manaus")
elif(n==61):
	print("Brasilia")
elif(n==71):
	print("Salvador")
elif(n==11):
	print("Sao Paulo")
elif(n==32):
	print("Juiz de Fora")
elif(n==19):
	print("Campinas")
elif(n==27):
	print("Vitoria")
elif(n==31):
	print("Belo Horizonte")
elif(n==91):
	print("Belem")
else:
	print("DDD nao cadastrado")
-- EXECUTION TIME:
0.789966
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
DDD nao cadastrado
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
DDD nao cadastrado
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
DDD nao cadastrado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
